# pimc-sim

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  HACKING.md  PLAN.md  README.md
cmake/: dev-mode.cmake  (+2 more)
pimc_simpy/: .coverage  PLAN.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
pimc_simpy/app/: check_jobs.py  collect_eq_ac_times.py  collect_eq_ac_times_local.py  collect_mc_information.py  run_equilibrium_density_evaluations.py  run_evaluations.py  run_evaluations_p64coarse.py  save_estimated_data.py
pimc_simpy/examples/: collect_mc_information.py  plot_eq_ac_times.py  project_info.py  run_coarse_grained_eq_ac_search.py  run_coarse_grained_mcmc_param_search.py  run_coarse_grained_simulations.py  run_equilibrium_density_simulations.py  run_identical_seeded_simulations.py  run_mcmc_param_search.py  shared_file_contents.py
pimc_simpy/playground/: calculate_autocorrelation.py  plot_histogram.py  plot_property_statistics.py  print_statistics.py  project_info.py  run_coarse_grained_simulations.py
pimc_simpy/scripts/: run_threebody_grid.py
pimc_simpy/scripts/moribs_pimcsim_conversion/: cartesian3d.py  convert_worldline.py  worldline_file_header_contents.txt
pimc_simpy/scripts/multi_simulation_compression/: README.md  block_index_mapping.py  block_to_job_index_map.txt  common.py  compress_histogram.py  compress_single_line_data.py
pimc_simpy/scripts/multi_simulation_compression/output/: continue.toml  prng.state
pimc_simpy/src/pimc_simpy/: __init__.py  _utils.py  autocorrelation.py  histogram.py  radial_distribution_function.py  single_value_estimate.py
pimc_simpy/src/pimc_simpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pimc_simpy/src/pimc_simpy/data/: __init__.py  monte_carlo.py  multibead_position_move_info.py  property_data.py  property_data_reading.py
pimc_simpy/src/pimc_simpy/datacollect/: __init__.py
pimc_simpy/tests/: conftest.py  test__utils.py  test_box_sides.py  test_histogram.py  test_project_info.py  test_propertydata.py  test_replacement_template.py  test_single_value_estimate.py
source/: CMakeLists.txt  argparser.hpp  argparser_evaluate_worldline.hpp  evaluate_worldline.cpp  helper.cpp  lib.cpp  main.cpp  mymath.hpp  old_perturbative2b.cpp  perturbative2b.cpp  perturbative2b3b4b.cpp
source/common/: common_utils.hpp  io_utils.hpp  toml_utils.hpp  writer_utils.hpp
source/common/buffered_writers/: buffered_writer.hpp  format_info.hpp
source/common/writers/: double_value_writer.hpp  single_value_writer.hpp  triple_value_writer.hpp  writer_utils.hpp
source/constants/: constants.hpp  conversions.hpp  mass.hpp
source/coordinates/: attard.hpp  box_sides.hpp  cartesian.hpp  constants.hpp  coord_utils.hpp  coordinates.hpp  measure.hpp  measure_concepts.hpp  measure_wrappers.hpp  operations.hpp  periodic_shift.hpp  periodicboxsides.hpp
source/coordinates/attard/: four_body.hpp  three_body.hpp
source/environment/: envir_utils.hpp  environment.hpp
source/estimators/: estim_utils.hpp
source/estimators/pimc/: centroid.hpp  centroid_radial_distribution_function.hpp  four_body_potential.hpp  primitive_kinetic.hpp  radial_distribution_function.hpp  three_body_potential.hpp  two_body_potential.hpp
source/estimators/writers/: default_writers.hpp  single_value_writer.hpp  writer_utils.hpp
source/geometries/: bravais.hpp  constants.hpp  geom_utils.hpp  lattice.hpp  lattice_type.hpp  unit_cell.hpp  unit_cell_translations.hpp
source/geometries/attard/: three_body.hpp
source/interactions/four_body/: constants.hpp  dispersion_potential.hpp  extrapolated_potential.hpp  interaction_ranges.hpp  long_range.hpp  potential_concepts.hpp  published_potential.hpp  rescaling.hpp  short_range.hpp  transformers.hpp
source/interactions/handlers/: composite_interaction_handler.hpp  full_interaction_handler.hpp  full_pair_interaction_handler.hpp  interaction_handler_concepts.hpp  nearest_neighbour_interaction_handler.hpp  periodic_full_pair_interaction_handler.hpp
source/interactions/three_body/: axilrod_teller_muto.hpp  potential_concepts.hpp  three_body_parah2.hpp  three_body_pointwise.hpp  three_body_pointwise_wrapper.hpp
source/interactions/two_body/: potential_concepts.hpp  two_body_pointwise.hpp  two_body_pointwise_tabulated.hpp  two_body_pointwise_wrapper.hpp
source/mathtools/: mathtools_utils.hpp
source/mathtools/grid/: grid2d.hpp  grid3d.hpp  grid_iterator.hpp  square_adjacency_matrix.hpp
source/mathtools/histogram/: histogram.hpp
source/mathtools/interpolate/: interp_utils.hpp  linear_interp.hpp  trilinear_interp.hpp
source/mathtools/io/: histogram.hpp
source/pimc/: bisection_level_manager.hpp  bisection_level_move_info.hpp  bisection_multibead_position_move_performer.hpp  centre_of_mass_move.hpp  single_bead_position_move.hpp
source/pimc/adjusters/: adjust_common.hpp  adjusters.hpp  bisection_level_adjuster.hpp  single_value_adjuster.hpp
source/pimc/trackers/: move_success_tracker.hpp
source/pimc/writers/: default_writers.hpp
source/rng/: distributions.hpp  generator.hpp  prng_state.hpp
source/simulation/: box_sides_writer.hpp  continue.hpp  timer.hpp
source/worldline/: worldline.hpp
source/worldline/writers/: delete_worldlines.hpp  read_worldlines.hpp  worldline_writer.hpp
test/: CMakeLists.txt
test/source/: adjuster_test.cpp  attard_test.cpp  bisection_level_manager_test.cpp  buffered_writer_test.cpp  cartesian_test.cpp  composite_handler_test.cpp  continue_test.cpp  dispersion_potential_test.cpp  four_body_test.cpp  fsh_potential_test.cpp  grid2d_test.cpp  histogram_test.cpp  lattice_test.cpp  linear_interp_test.cpp  measure_test.cpp  mymath_test.cpp  pimc-sim_test.cpp  prng_state_test.cpp  square_adjacency_matrix_test.cpp  transformer_test.cpp  trilinear_interp_test.cpp  two_body_test.cpp  unit_cell_test.cpp  unit_cell_translations_test.cpp  worldline_test.cpp  worldlines_test.cpp
test/test_io/: README.md
test/test_utils/: filesearch.cpp  test_tensor_utils.cpp  test_tensor_utils.hpp  test_utils.cpp  test_utils.hpp
(+41 files in other folders)
